--- a/src/input.css
+++ b/src/input.css
@@ -7,14 +7,14 @@
     @apply absolute top-10 z-50 w-full bg-white text-center animate-slideDown;
 }
 .top-menu-item {
-    @apply cursor-pointer py-1 hover:text-gray-900 relative after:lg:absolute after:lg:bottom-0 after:lg:left-0 after:lg:bg-light-coffee after:lg:h-0.5 after:lg:w-0 hover:after:lg:w-full after:lg:transition-all after:lg:ease-in-out after:lg:duration-300;
+    @apply cursor-pointer py-1 hover:text-gray-900 relative after:lg:absolute after:lg:bottom-0 after:lg:left-0 after:lg:bg-coffee-200 after:lg:h-0.5 after:lg:w-0 hover:after:lg:w-full after:lg:transition-all after:lg:ease-in-out after:lg:duration-300;
 }
 .top-menu-item-active {
     @apply text-gray-800;
 }
 
 .top-menu-icon {
-    @apply cursor-pointer py-1 hover:text-gray-900 relative after:absolute after:bottom-0 after:left-0 after:bg-light-coffee after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out after:duration-300;
+    @apply cursor-pointer py-1 hover:text-gray-900 relative after:absolute after:bottom-0 after:left-0 after:bg-coffee-200 after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out after:duration-300;
 }
 
 .td-icon {
@@ -22,4 +22,13 @@
 }
 .td-badge-circle {
     @apply text-xs text-center rounded-full px-1.5;
+}
+.td-subheadline {
+    @apply flex justify-center items-center mb-24;
+}
+.td-subheadline-deco-line {
+    @apply w-8 h-px bg-gray-200;
+}
+.td-subheadline-label {
+    @apply uppercase mx-4 tracking-widest text-gray-500 font-medium text-[12px] text-center;
 }
